# hr-performance-system

./: .env.example  .gitignore  CLAUDE.md
.playwright-mcp/: page-2026-05-28T12-49-12-956Z.yml  page-2026-05-28T13-00-49-551Z.yml  page-2026-05-28T14-50-26-601Z.yml  page-2026-05-28T14-54-45-577Z.yml  page-2026-05-28T15-00-33-983Z.yml  page-2026-05-28T15-02-20-214Z.yml  page-2026-05-28T15-06-02-509Z.yml  page-2026-05-28T15-07-43-952Z.yml  page-2026-05-29T01-44-22-797Z.yml  page-2026-05-29T01-48-31-992Z.yml  page-2026-05-29T01-49-28-873Z.yml  page-2026-05-29T01-51-34-923Z.yml  page-2026-05-29T03-24-44-715Z.yml  page-2026-05-29T03-45-35-804Z.yml  page-2026-05-29T15-47-11-111Z.yml  page-2026-05-29T15-57-46-600Z.yml  page-2026-05-30T05-20-35-487Z.yml  (+7 more)
backend/: main.py  pyproject.toml
backend/agents/: analysis_agent.py  data_collector.py  decision_agent.py  execution_agent.py
backend/models/: __init__.py  agent_status.py  decision.py  employee.py  report.py
backend/routers/: agents.py  chat.py  decisions.py  employees.py  health.py  monthly_meeting.py  reports.py  reset.py  stream.py
backend/services/: database.py  logger.py  minimax_client.py  monthly_meeting.py  rule_engine.py  scheduler.py  sse_manager.py
backend/tests/: test_agents_router.py  test_analysis_agent.py  test_data_collector.py  test_database.py  test_decision_agent.py  test_decisions_router.py  test_employees_router.py  test_execution_agent.py  test_health.py  test_minimax_client.py  test_monthly_meeting.py  test_monthly_meeting_router.py  test_reports_router.py  test_sse.py
frontend/: next.config.ts  (+4 more)
(+86 files in other folders)
